fix(TextInput): truncate

--- a/src/shared/ui/TextInput/TextInput.module.scss
+++ b/src/shared/ui/TextInput/TextInput.module.scss
@@ -23,10 +23,16 @@
   font-size: $font-size-md;
   padding: 0 $space-md;
   outline: none;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   transition: box-shadow 0.2s ease, border-color 0.2s ease;
 
   &::placeholder {
     color: $color-text-tertiary;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
   &:focus {
@@ -38,5 +44,9 @@
     border-radius: 8px;
     padding-left: $space-lg;
     background-color: $color-bg-white;
+
+    &.input--search {
+      padding-right: 50px;
+    }
   }
 }
